--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,7 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name sectorrent.com www.sectorrent.com;
+        server_name mywiki.com www.mywiki.com;
     
         location / {
             proxy_pass http://www;
