--- a/compose.yaml
+++ b/compose.yaml
@@ -11,7 +11,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     restart: always
     networks:
-      sectorrent:
+      mywiki:
         ipv4_address: 10.5.1.2
     #profiles:
     #  - donotstart
@@ -21,7 +21,7 @@ services:
       context: ./www
       args:
         RUNTIME: ${RUNTIME}
-    image: sectorrent_com_www
+    image: mywiki_www
     container_name: www
     environment:
       NODE_ENV: production
@@ -29,13 +29,13 @@ services:
     volumes:
       - ./env:/env
     networks:
-      sectorrent:
+      mywiki:
         ipv4_address: 10.5.1.3
     #profiles:
     #  - donotstart
 
 networks:
-  sectorrent:
+  mywiki:
     #external: true
     driver: bridge
     attachable: true
